# wlroots

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  meson.build  meson.options
.builds/: alpine.yml  archlinux.yml  freebsd.yml
backend/: backend.c
backend/drm/: atomic.c  backend.c  color.c  drm.c  fb.c  legacy.c  libliftoff.c  properties.c  renderer.c  util.c
backend/headless/: backend.c  output.c
backend/libinput/: backend.c  keyboard.c  meson.build  pointer.c  switch.c  tablet_tool.c
backend/session/: linux.c  meson.build  session.c  udev.c
backend/wayland/: backend.c  meson.build  output.c  pointer.c
backend/x11/: backend.c  output.c
bench/: bench_scene.c  meson.build
docs/: env_vars.md
examples/: cairo-buffer.c  clipboard-control.c  embedded.c  fullscreen-shell.c  meson.build  output-layers.c  output-layout.c  pointer.c  rotation.c  scene-graph.c  simple.c  tablet.c  touch.c
examples/render-pass-ext/: meson.build  render-pass-ext.c  triangle_pass.c  triangle_pass.h
examples/render-pass-ext/gles2/: meson.build  triangle_pass.c  triangle_pass.h
examples/render-pass-ext/gles2/shaders/: meson.build  triangle.frag  triangle.vert
examples/render-pass-ext/pixman/: meson.build  triangle_pass.c  triangle_pass.h
examples/render-pass-ext/vulkan/: meson.build  triangle_pass.c  triangle_pass.h
examples/render-pass-ext/vulkan/shaders/: meson.build  triangle.frag  triangle.vert
include/: meson.build
include/backend/: headless.h  wayland.h  x11.h
include/backend/drm/: color.h  drm.h  fb.h  iface.h  properties.h  renderer.h  util.h
include/backend/session/: linux.h  session.h  udev.h
include/render/: color.h  drm_syncobj_merger.h  egl.h  gles.h  gles2.h  pixel_format.h  pixman.h  vulkan.h
include/render/allocator/: gbm.h  udmabuf.h
include/types/: wlr_color_management_v1.h  wlr_foreign_toplevel.h  wlr_output.h  wlr_scene.h
include/util/: cleanup.h  matrix.h  rect_union.h  signal.h
include/wlr/: config.h.in  xcursor.h
include/wlr/backend/: drm.h  libinput.h  session.h  wayland.h
include/wlr/interfaces/: wlr_output.h
include/wlr/render/: color.h  drm_syncobj.h  drm_syncobj_merger.h  egl.h  gles.h  gles2.h  interface.h  pass.h  swapchain.h  wlr_renderer.h  wlr_texture.h
include/wlr/types/: wlr_buffer.h  wlr_color_management_v1.h  wlr_color_representation_v1.h  wlr_commit_timing_v1.h  wlr_compositor.h  wlr_cursor.h  wlr_damage_ring.h  wlr_data_device.h  wlr_data_receiver.h  wlr_export_dmabuf_v1.h  wlr_ext_background_effect_v1.h  wlr_ext_data_control_v1.h  wlr_ext_foreign_toplevel_list_v1.h  wlr_ext_foreign_toplevel_request_v1.h  wlr_ext_image_capture_source_v1.h  wlr_ext_image_copy_capture_v1.h  wlr_ext_virtual_keyboard_v1.h  (+40 more)
include/xwayland/: selection.h  xwm.h
protocol/: ext-virtual-keyboard-v1.xml  meson.build  wlr-export-dmabuf-unstable-v1.xml  wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-output-management-unstable-v1.xml  xdg-cutouts-v1.xml
render/: color.c  color_fallback.c  color_lcms2.c  dmabuf.c  dmabuf_linux.c  drm_syncobj.c  drm_syncobj_merger.c  egl.c  gen_pixel_format.sh  meson.build  pass.c  pixel_format.c  pixel_format_table.c  swapchain.c  wlr_renderer.c  wlr_texture.c
render/allocator/: allocator.c  gbm.c  meson.build
render/gles/: meson.build  pass.c  pixel_format.c  renderer.c  texture.c
render/gles/shaders/: gles3_common.vert  gles3_quad.frag  gles3_tex_external.frag  gles3_tex_rgba.frag  gles3_tex_rgbx.frag  meson.build
render/gles2/: pass.c  renderer.c  texture.c
render/pixman/: meson.build  pass.c  renderer.c
render/vulkan/: allocator.c  meson.build  pass.c  pixel_format.c  renderer.c  texture.c  vulkan.c
render/vulkan/shaders/: blur.frag  common.vert  meson.build  output.frag  quad.frag  texture.frag
test/: bench_render_pass.c  bench_scene.c  meson.build  test_box.c  test_surface.c  test_vulkan_stage_buffer.c
tinywl/: Makefile  tinywl.c
types/: meson.build  wlr_color_management_v1.c  wlr_color_representation_v1.c  wlr_commit_timing_v1.c  wlr_compositor.c  wlr_cursor.c  wlr_cursor_shape_v1.c  wlr_damage_ring.c  wlr_data_control_v1.c  wlr_data_receiver.c  wlr_export_dmabuf_v1.c  wlr_ext_background_effect_v1.c  wlr_ext_data_control_v1.c  wlr_ext_foreign_toplevel_list_v1.c  wlr_ext_foreign_toplevel_request_v1.c  wlr_ext_image_copy_capture_v1.c  wlr_ext_virtual_keyboard_v1.c  wlr_ext_workspace_v1.c  wlr_fifo_v1.c  wlr_foreign_toplevel_management_v1.c  wlr_frame_scheduler.c  wlr_gamma_control_v1.c  wlr_idle_notify_v1.c  wlr_input_method_v2.c  wlr_keyboard.c  wlr_keyboard_group.c  wlr_layer_shell_v1.c  wlr_linux_dmabuf_v1.c  wlr_linux_drm_syncobj_v1.c  wlr_output_group.c  wlr_output_layer.c  wlr_output_layout.c  wlr_output_management_v1.c  wlr_output_manager.c  wlr_output_swapchain_manager.c  wlr_pointer.c  wlr_pointer_constraints_v1.c  wlr_pointer_warp_v1.c  wlr_presentation_time.c  wlr_primary_selection.c  (+14 more)
types/buffer/: buffer.c  client.c  resource.c
types/data_device/: wlr_data_device.c  wlr_data_offer.c  wlr_data_source.c  wlr_drag.c
types/ext_image_capture_source_v1/: base.c  foreign_toplevel.c  output.c  scene.c
types/input_router/: drag.c  focus.c  implicit_grab.c  input_method.c  keyboard.c  pointer.c  pointer_constraints.c  pointer_grab.c  relative_pointer.c  router.c  seat.c  session.c  text_input.c  touch.c  xdg_popup_grab.c
types/output/: cursor.c  output.c  render.c  state.c
types/scene/: drag_icon.c  layer_shell_v1.c  output.c  output_layout.c  subsurface_tree.c  surface.c  wlr_scene.c  wlr_scene_buffer.c  wlr_scene_node.c  wlr_scene_rect.c  wlr_scene_tree.c  xdg_shell.c
types/seat/: wlr_seat.c  wlr_seat_keyboard.c  wlr_seat_pointer.c  wlr_seat_touch.c
types/tablet_v2/: wlr_tablet_v2_tool.c
types/xdg_shell/: wlr_xdg_popup.c  wlr_xdg_shell.c  wlr_xdg_surface.c  wlr_xdg_toplevel.c
util/: box.c  cleanup.c  matrix.c  meson.build  rect_union.c  rectpack.c  region.c  signal.c
xcursor/: wlr_xcursor.c
xwayland/: server.c  xwayland.c  xwm.c
xwayland/selection/: dnd.c  incoming.c  outgoing.c  selection.c
(+10 files in other folders)
